# EGWF-Easy

./: Cargo.toml  README.md
Kazuya/: ewgf.rs
src/: lib.rs
src/Kazuya/: ewgf.rs  mod.rs
