[package]
name = "ewgf_easy"
version = "1.0.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.6.0"
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/hdr-development/smashline.git" }
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
